--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,11 @@ sudo: false
 language: python
 python:
   - "2.7"
+  - "3.3"
   - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7-dev"
 install: 
   - pip install tox-travis
   - pip install coveralls
