--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,10 @@
 [tox]
-envlist = py27,py36
+envlist=
+	py27
+	py36
 [testenv]
-deps=nose
-commands=nosetests
+deps=
+	nose
+	coverage
+commands=
+	nosetests
